--- a/estilos/style.css
+++ b/estilos/style.css
@@ -40,6 +40,24 @@ iframe#tela {
     position: relative;
     top: 80px;
     left: 22px;
-    width: 270px;
+    width: 267px;
     height: 471px;
+}
+
+section#redes-sociais {
+    text-align: right;
+}
+
+section#redes-sociais img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.400);
+}
+
+section#redes-sociais img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.637);/*efeito branco nos botões*/
+    transform: translate(-3px, -3px);/*efeito subir botão para a esquerda*/
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.400);/*sobreamento para ir junto com efeito para esquerda*/
+    transition: transform 0.5s, border 0.5s;
 }
